# Beat-Transformer

./: .gitignore  pyproject.toml
src/beat_transformer/: __init__.py  model.py
tests/: test_model.py
